# ipv6-route-listener

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
route_listener/: logger.py  main.py  packet_filter.py  packet_handler.py  packet_parser.py  route_configurator.py  router_discovery.py  router_solicitor.py  scapy_handler.py
